k8s/base/app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener
  labels:
    app: url-shortener
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: url-shortener
